__HEADER__(`Octave News Archive')

<div class="section">
<dl>
<dt>January 28, 2010</dt>
<dd>Version 3.2.4 has been released and is now available for ftp.
Octave 3.2.4 is a bug-fixing release
__OCTAVE_HTTP__(`NEWS-3.2.html', `NEWS') file for a list of
user-visible changes in the 3.2.x series.</dd>
<dt>September 21, 2009</dt>
<dd>Version 3.2.3 has been released and is now available for ftp.
Octave 3.2.3 is a bug-fixing release
__OCTAVE_HTTP__(`NEWS-3.2.html', `NEWS') file for a list of
user-visible changes in the 3.2.x series.</dd>
<dt>September 12, 2009</dt>
<dd>A new snapshot of the current development version of Octave is
available for ftp (3.3.50).  You should only be using this version if you are
interested in testing the latest features and don't mind hitting the
occasional bug.</dd>
<dt>July 22, 2009</dt>
<dd>Version 3.2.2 has been released and is now available for ftp.
Octave 3.2.2 is a bug-fixing release
__OCTAVE_HTTP__(`NEWS-3.2.html', `NEWS') file for a list of
user-visible changes in the 3.2.x series.</dd>
<dt>June 6, 2009</dt>
<dd>Version 3.2.0 has been released and is now available for ftp.
Octave 3.2.0 is a major new release.  See the
__OCTAVE_HTTP__(`NEWS-3.2.html', `NEWS') file for a list of
user-visible changes.</dd>
<dt>April 8, 2009</dt>
<dd>Version 3.0.5 has been released and is now available for ftp.
Octave 3.0.5 fixes a serious file reading bug that was discovered just
after the 3.0.4 release.</dd>
<dt>April 2, 2009</dt>
<dd>Version 3.0.4 has been released and is now available for ftp.
Octave 3.0.4 is a bug-fixing release.  Most bugs reported since the
release of version 3.0.3 have been fixed.
Please note that Octave 3.0 is significantly different from Octave
2.1.x, particularly with regard to graphics, path handling, and
built-in variables.  Please read the __OCTAVE_HTTP__(`NEWS-3.html',
`NEWS') file.</dd>
<dt>March 26, 2009</dt>
<dd>A new snapshot of the current development version of Octave is