@@ -40,13 +40,6 @@ To see the collection of prior posting to the list, visit the
 You can (un)subscribe to the list by following instructions on the
 <a href="http://www.cae.wisc.edu/mailman/listinfo/help-octave">list information page</a>.<br/>
 </dd>
-<dt><a href="http://www.cae.wisc.edu/mailman/listinfo/bug-octave">bug</a>: Bug reports (sometimes fixes are posted to this list).</dt>
-<dd>
-To see the collection of prior posting to the list, visit the
-<a href="http://www-old.cae.wisc.edu/pipermail/bug-octave">bug archives</a>.<br/>
-You can (un)subscribe to the list by following instructions on the
-<a href="http://www.cae.wisc.edu/mailman/listinfo/bug-octave">list information page</a>.<br/>
-</dd>
 <dt><a href="http://www.cae.wisc.edu/mailman/listinfo/octave-maintainers">maintainers</a>: Discussion about the development and maintenance of Octave.</dt>
 <dd>
 To see the collection of prior posting to the list, visit the
@@ -89,23 +82,6 @@ may be found here:
 | <a href="http://www.octave.org/old-list-archives/help-octave/1993">1993</a>
 | <a href="http://www.octave.org/old-list-archives/help-octave/1992">1992</a> ]</p>
 
-<p>bug:
-[ <a href="http://www.octave.org/old-list-archives/bug-octave/2006">2006</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/2005">2005</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/2004">2004</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/2003">2003</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/2002">2002</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/2001">2001</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/2000">2000</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/1999">1999</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/1998">1998</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/1997">1997</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/1996">1996</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/1995">1995</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/1994">1994</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/1993">1993</a>
-| <a href="http://www.octave.org/old-list-archives/bug-octave/1992">1992</a> ]</p>
-
 <p>maintainers:
 [ <a href="http://www.octave.org/old-list-archives/octave-maintainers/2006">2006</a>
 | <a href="http://www.octave.org/old-list-archives/octave-maintainers/2005">2005</a>
@@ -125,6 +101,10 @@ may be found here:
 <p>
 <p>There are also some older mailing lists which are no longer active.
 <dl>
+<dt><a href="http://www.cae.wisc.edu/mailman/listinfo/bug-octave">bug</a></dt>
+<dd>This list was used to report bugs but is now obsolete because we
+are using the <a href="http://savannah.gnu.org/bugs/?group=octave">bug tracker on Savannah</a>.  Recent archives may be found
+<a href="http://www.cae.wisc.edu/pipermail/bug-octave">here</a>.</dd>
 <dt><a href="http://www.cae.wisc.edu/mailman/listinfo/octave-graphics">graphics</a></dt>
 <dd>This list was used to discuss the future development of GUI and
 graphics tools for Octave.  The maintainers list is now used for
@@ -138,6 +118,23 @@ code to fix bugs in Octave itself or new core functions for Octave
 should be posted to the bug or maintainers lists.  Recent archives may
 be found <a href="http://www.cae.wisc.edu/pipermail/octave-sources">here</a>.</dd>
 </dl>
+
+<p>Older archives of the bug list may be found here:
+[ <a href="http://www.octave.org/old-list-archives/bug-octave/2006">2006</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/2005">2005</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/2004">2004</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/2003">2003</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/2002">2002</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/2001">2001</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/2000">2000</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/1999">1999</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/1998">1998</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/1997">1997</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/1996">1996</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/1995">1995</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/1994">1994</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/1993">1993</a>
+| <a href="http://www.octave.org/old-list-archives/bug-octave/1992">1992</a> ]</p>
 
 <p>Older archives of the graphics list may be found here:
 [ <a href="http://www.octave.org/old-list-archives/octave-graphics/2006">2006</a>
