@@ -4,12 +4,25 @@ __HEADER__(`Bugs!')
 <p>Your bug reports play an essential role in making Octave reliable.</p>
 
 <p>When you encounter a problem, the first thing to do is to see if it is
-already known.  Octave's
-__OCTAVE_HTTP__(`docs.html', `manual') contains a list of known causes
-of trouble.  Another place to look to see if your problem has been
-reported (and perhaps already solved) is the 
-__OCTAVE_HTTP__(`archive.html', `archive of bug reports') for Octave.
-If you your problem does not appear to be known, then you should
+already known.  The two best places to look for reported problems are
+</p>
+
+<ul>
+<li>__HTTP__(`savannah.gnu.org/bugs/?group=octave', `The Octave bug
+tracker on Savannah').
+</li>
+<li>__OCTAVE_HTTP__(`archive.html', `The archive of bug reports sent
+to the bug-octave mailing list').
+</li>
+</ul>
+
+<p>
+Note you should use the bug reporting system on Savannah to file new
+bug reports.  We are transitioning away from using the mailing list to
+report bugs.</p>
+<p>The Octave __OCTAVE_HTTP__(`docs.html', `manual') also contains a
+list of known causes of trouble.</p>
+<p>If you your problem does not appear to be known, then you should
 report the problem.</p>
 
 <p>Reporting a bug may help you by bringing a solution to your problem,
@@ -55,17 +68,15 @@ suggestions for improvement are welcome in any case.</li>
 <div class="section">
 __TITLE_BAR__(`Where and How to Send Bug Reports')
 
-<p>If you have Octave working at all, the easiest way to prepare a
-complete bug report is to use the Octave function
-<code>bug_report</code>.  When you execute this function, Octave will
-prompt you for a subject and then invoke the editor on a file that
-already contains all the configuration information.  When you exit the
-editor, Octave will mail the bug report for you.</p>
+<p>To report a bug in Octave, 
+__HTTP__(`savannah.gnu.org/bugs/?func=additem&group=octave', 
+         `submit a bug report') using the bug tracker on
+__HTTP__(`savannah.gnu.org', `Savannah').
+</p>
 
 <p>Please do <strong>not</strong> send bug reports to the
 <samp>help-octave</samp> mailing list.  Most users of Octave do not
-want to receive bug reports.  Those that do have asked to be on the
-bug-octave mailing list.</p>
+want to receive bug reports.</p>
 </div>
 
 <div class="section">
