@@ -32,21 +32,23 @@
 <div class="section">
 <p>The <a href="mailto:help@octave.org">help</a> mailing list exists for
 the discussion of matters related to using and installing Octave.  If
-would like to join the discussion, please send a message containing
-just <b>subscribe</b> in the body to
-<a href="mailto:help-request@octave.org">help-<b>request</b>@octave.org</a>.
-An <a href="archive.html">archive of older messages</a> is
-available.</p>
+would like to join the discussion, please visit the
+<a href="http://www.cae.wisc.edu/mailman/listinfo/help-octave">list
+subscription page</a> on the web.
+</p>
+<p>Messages sent to the list are also
+<a href="archive.html">archived</a>.</p>
 
 <p>Please do <strong>not</strong> send requests to be added or removed
 from the the mailing list, or other administrative trivia to the list
 itself.</p>
 
-<p>If you think you have found a bug in the installation procedure,
-however, you should send a complete bug report for the problem to the
-<a href="mailto:bug-octave@octave.org">bug-octave</a> mailing list.
-<a href="bugs.html">This page</a> contains more information
-that will help you to submit a useful report.</p>
+<p>If you think you have found a bug in Octave or in the installation
+procedure, however, you should submit a complete bug report to
+<a href="http://savannah.gnu.org/bugs/?group=octave">the Octave bug
+tracker on Savannah</a>.  But before you submit a bug report, please
+<a href="bugs.html">learn how to submit a useful bug report</a>.
+</p>
 </div>
 
 <div id="footer"><p>Copyright &copy; 1998-2006
