@@ -3,22 +3,23 @@ __HEADER__(`Octave Help')
 <div class="section">
 <p>The __MAILTO__(`help@octave.org', `help') mailing list exists for
 the discussion of matters related to using and installing Octave.  If
-would like to join the discussion, please send a message containing
-just <b>subscribe</b> in the body to
-__MAILTO__(`help-request@octave.org',
-           `help-<b>request</b>@octave.org').
-An __OCTAVE_HTTP__(`archive.html', `archive of older messages') is
-available.</p>
+would like to join the discussion, please visit the
+<a href="http://www.cae.wisc.edu/mailman/listinfo/help-octave">list
+subscription page</a> on the web.
+</p>
+<p>Messages sent to the list are also
+__OCTAVE_HTTP__(`archive.html', `archived').</p>
 
 <p>Please do <strong>not</strong> send requests to be added or removed
 from the the mailing list, or other administrative trivia to the list
 itself.</p>
 
-<p>If you think you have found a bug in the installation procedure,
-however, you should send a complete bug report for the problem to the
-__MAILTO__(`bug-octave@octave.org', `bug-octave') mailing list.
-__OCTAVE_HTTP__(`bugs.html', `This page') contains more information
-that will help you to submit a useful report.</p>
+<p>If you think you have found a bug in Octave or in the installation
+procedure, however, you should submit a complete bug report to
+__HTTP__(`savannah.gnu.org/bugs/?group=octave', `the Octave bug
+tracker on Savannah').  But before you submit a bug report, please
+__OCTAVE_HTTP__(`bugs.html', `learn how to submit a useful bug report').
+</p>
 </div>
 
 __OCTAVE_TRAILER__(`about')
