@@ -17,6 +17,11 @@ __OCTAVE_HTTP__(`about.html', `about Octave').</p></div>
 __TITLE_BAR__(`Current News')
 
 <dl>
+<dt>March 24, 2010</dt>
+<dd>We are now using the __HTTP__(`savannah.gnu.org/bugs/?group=octave',
+`bug tracker on Savannah') instead of the bug@octave.org mailing
+list.  Fow now, the list will continue to function, but you are
+strongly encouraged to use the tracker instead.</dd>
 <dt>January 28, 2010</dt>
 <dd>Version 3.2.4 has been released and is now available for ftp.
 Octave 3.2.4 is a bug-fixing release
